<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!-- MAIN APP  -->
    <string name="app_name">HybridPlayGameSkeleton</string>
    <string-array name="menu_array">
        <item>Play</item>
        <item>Sensor</item>
        <item>Instructions</item>
        <item>Credits</item>
        <item>Exit</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <!-- NETWORK -->
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="websiteSyntaxError">Invalid website URL</string>
    <string name="checkSetupInternet">No internet connection.</string>
    <string name="error">Something went wrong; please check your setup and the system log</string>
    
    <!-- WIFI -->
    <string name="sensor_disconnected">SENSOR DISCONNECTED</string>
    <string name="sensor_connected">SENSOR CONNECTED</string>
    <string name="sensor_connect">CONNECT</string>
    <string name="sensor_refresh">REFRESH</string>
    <string name="sensor_position">CHOOSE SENSOR POSITION</string>
    <string name="sensor_calibrate">AUTO CALIBRATE</string>
    <string name="sensor_BSSID">BSSID</string>
    <string name="sensor_SSID">SSID</string>
    <string name="sensor_level">Level</string>
    <string name="sensor_ip">192.168.1.100</string>
    <string name="sensor_signal_strength">SIGNAL STRENGTH</string>
    
    <!-- BLUETOOTH -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="bt_device_address">Device Address</string>
    <string name="bt_device_name">Device Name</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    
    <!-- CALIBRATION -->
    <string name="sensorXAngle">X</string>
    <string name="sensorYAngle">Y</string>
    <string name="sensorZAngle">Z</string>
    <string name="sensorIRDistance">IR</string>
    
    <!-- DUMMY -->
    <string name="content_text">Text Content</string>
    <string name="content_image">Image Content</string>

</resources>
